plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.14'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wanted'
version = '0.0.1-SNAPSHOT'
description = 'legend-momo-city'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    /* 설명. Spring Boot Starters */
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    /* 설명. DB Migration - Flyway */
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-mysql'

    /* 설명. JWT 토큰 (강의 버전) */
    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
    runtimeOnly   'io.jsonwebtoken:jjwt-impl:0.11.2'
    runtimeOnly   'io.jsonwebtoken:jjwt-jackson:0.11.2'

    /* 설명. File Upload */
    implementation 'commons-io:commons-io:2.16.1'

    /* 설명. AWS S3 (영상 / 이미지) */
    implementation platform('software.amazon.awssdk:bom:2.28.16')
    implementation 'software.amazon.awssdk:s3'

    /* 설명. Swagger - SpringDoc OpenAPI */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

    /* 설명. Lombok */
    compileOnly         'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    /* 설명. Dev / Runtime */
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly     'com.mysql:mysql-connector-j'

    /* 설명. Test */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testCompileOnly         'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
    testRuntimeOnly         'org.junit.platform:junit-platform-launcher'

    /* 설명. WebClient (소셜 로그인 카카오 API 호출) */
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    /* 설명. 성능 측정용 */
//    runtimeOnly 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    /* 설명. 모니터링 - Actuator + Prometheus 메트릭 노출 */
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'

    /* 설명. 모니터링 - Loki */
    implementation 'com.github.loki4j:loki-logback-appender:1.5.2'

    /* 설명. Google Drive API */
    implementation 'com.google.api-client:google-api-client:2.2.0'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20220815-2.0.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
